--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,12 @@ DB_USERNAME=admin
 DB_PASSWORD=admin
 
 CACHE_DRIVER=file
+
+QUEUE_DRIVER=redis
 QUEUE_CONNECTION=sync
+
+BROADCAST_DRIVER=redis
+
+JWT_SECRET=
+JWT_TTL=1
+JWT_REFRESH_TTL=20160
